--- a/templates/Admin/Security/login.html.twig
+++ b/templates/Admin/Security/login.html.twig
@@ -14,7 +14,7 @@
 {% block content %}
     {# TODO: logo asset #}
   {#{% include 'SonataSyliusUserBundle:Security:_login.html.twig' with {'action': path('sonata_sylius_user_login_check'), 'paths': {'logo': 'assets/admin/img/logo.png'}} %}#}
-    {% include 'Admin/Security/_login.html.twig' with {'action': path('sonata_admin_login_check'), 'paths': {}} %}
+    {% include 'Admin/Security/_login.html.twig' with {'action': path('app_admin_login_check'), 'paths': {}} %}
 {% endblock %}
 
 {% block javascripts %}
